# duck_dive_competition

./: .gitignore  LICENSE  README.md  pyproject.toml
.dive-preview/: index.html  package-lock.json  package.json  shoot.mjs  smoke.mjs  vite.config.ts
.dive-preview/src/: dive.tsx  main.tsx  md-sdk.tsx
data/: anthropic_history_raw.json
scripts/: load_timezones.py  load_world.py
src/outage_data/: analysis.py  cli.py  fetch.py  load.py  model.py  normalize.py
tests/: test_dive_logic.py  test_fetch.py  test_normalize.py
tests/fixtures/: anthropic_history.json  google_cloud.json  statuspage_anthropic.json
