[project]
name = "outage-data"
version = "0.1.0"
description = "Fetch and normalize AI provider outage data for MotherDuck Dives"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outage_data"]
